# OggBoxTouch

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  NoodleGame.ioc  OggBoxTouch.ioc  README.md  STM32-for-VSCode.config.yaml  STM32Make.make
Application/Inc/: bsp.h  lv_conf.h  lv_port_disp.h
Application/Src/: lv_port_disp.c
Core/Inc/: GUI.h  lcd.h  main.h  spi.h  stm32f4xx_it.h  test.h  touch.h
Core/Src/: GUI.c  freertos.c  lcd.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  test.c
USB_HOST/App/: usb_host.c
